# build-your-own-database-in-c

./: .gitignore  CMakeLists.txt
data/: pagedb.data
include/: cli.h  command.h  kv_store.h  parser.h  shell.h  storage_log.h
project/: commands.sh
src/: cli.c  command.c  kv_store.c  main.c  parser.c  shell.c  storage_log.c
tests/cli/: test_cli.c
